--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 spring.flyway.baseline-on-migrate = true
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
+logging.level.org.springframework.security=trace
+
