--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/test3?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/test3
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -7,4 +7,5 @@ spring.jpa.show-sql: true
 spring.flyway.baseline-on-migrate = true
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
 logging.level.org.springframework.security=trace
+#spring.main.allow-bean-definition-overriding=true
 
